--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -13,4 +13,108 @@ a {
 
 * {
   box-sizing: border-box;
+} */
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f0f0f0;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  transition: background-color 0.5s ease;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  transition: color 0.5s ease;
+}
+
+h1 {
+  color: #008080;
+  margin-bottom: 20px;
+  animation: fadeInUp 1s ease;
+}
+
+form {
+  margin-bottom: 20px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+button {
+  padding: 10px;
+  margin-right: 10px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+button:hover {
+  background-color: #008080;
+  color: #fff;
+}
+
+p {
+  margin-bottom: 15px;
+}
+
+.error {
+  color: #ff0000;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.favorites-history {
+  margin-top: 20px;
+}
+
+.favorites-history h2,
+.favorites-history ul,
+.clear-history-btn {
+  animation: fadeInUp 1s ease;
+}
+
+.clear-history-btn {
+  background-color: #ff0000;
+  color: #fff;
+}
+
+.clear-history-btn:hover {
+  background-color: #cc0000;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
